<resources>
    <string name="app_name">Calculator</string>
    <string name="no1">1</string>
    <string name="no2">2</string>
    <string name="no3">3</string>
    <string name="no4">4</string>
    <string name="no5">5</string>
    <string name="no6">6</string>
    <string name="no7">7</string>
    <string name="no8">8</string>
    <string name="no9">9</string>
    <string name="no0">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="clear">C</string>
    <string name="AC">AC</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="neg">+/-</string>
    <string name="root">sqrt</string>
    <string name="test">test</string>
    </resources>
